fix(NextArticle): wrapped each article in a link, added key and removed gap

--- a/src/app/[slug]/page.module.sass
+++ b/src/app/[slug]/page.module.sass
@@ -10,7 +10,6 @@
         display: flex
         flex-direction: column
         justify-content: space-between
-        gap: 82px
         h2
             margin-bottom: 0.75rem
             text-align: left
